local persistence is adequate, performance suffers when selected tile list gets too long, fixed major glitch with map having wrong size (due to change in flex layout when modal was toggled or the app was reloaded), affected selecting (caused an offset that increased as map awas zoomed out) and made things blurry, that glitch is fixed, but select is now incomplete and mapviewer refactor is only partial, major todo need to convert to using geojson features, should do the geojson creation on the backend, that is a major todo now

--- a/src/assets/css/AddAreaOfInterestModal.css
+++ b/src/assets/css/AddAreaOfInterestModal.css
@@ -3,9 +3,6 @@
 .addAreaOfInterestModal {
     border: 1px dashed grey;
     /* margin: 2px; */
-    flex-grow: 1;
-    min-width: 20%;
-
 }
 
 /* .areaOfInterestList > .header {
