--- a/src/assets/css/AreaOfInterestList.css
+++ b/src/assets/css/AreaOfInterestList.css
@@ -3,7 +3,6 @@
     /* margin: 2px; */
     flex-shrink: 1;
 	min-width: 20%;
-	max-width: 30%;
 
 }
 
