--- a/src/assets/css/MainContainer.css
+++ b/src/assets/css/MainContainer.css
@@ -1,8 +1,8 @@
 @import 'ol/ol.css';
 
 .mainContainer {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   border: 1px solid lightgrey;
   display: flex;
   flex-direction: row;
@@ -63,4 +63,6 @@ h1 {
 
 .display-none {
   display: none;
+  width: 0px;
+  height: 0px;
 }
