--- a/src/assets/css/TileList.css
+++ b/src/assets/css/TileList.css
@@ -2,8 +2,10 @@
     border-left: 1px solid lightgrey;
     /* margin: 2px; */
     flex-grow: 1;
-    min-width: 380px;
-    overflow-y: scroll;
+	min-width: 30%;
+	max-width: 40%;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .tileList ul {
